<resources>
    <string name="app_name">StoreApp</string>
    <string name="nav_header_title">Nombre de Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="prompt_username">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_login">Iniciar Sesion</string>
    <string name="menu_home">Inicio</string>
    <string name="prod_search">Buscar producto</string>
    <string name="spec_search">Buscar especificación</string>
    <string name="menu_catalog">Catálogo</string>
    <string name="menu_order">Compras</string>
    <string name="menu_main_sale">Ventas</string>
    <string name="menu_sale">Nueva Venta</string>
    <string name="menu_action_sales_date">Ventas por día</string>
    <string name="menu_action_sales_now">Ventas de hoy</string>
    <string name="menu_action_sale_save">Registrar venta</string>
    <string name="menu_main_credit">Cuentas</string>
</resources>
