<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gas.storeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.gas.storeapp.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog">
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.gas.storeapp.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order">
    </fragment>

    <fragment
        android:id="@+id/nav_main_sale"
        android:name="com.gas.storeapp.ui.sale.MainSaleFragment"
        android:label="@string/menu_main_sale"
        tools:layout="@layout/fragment_sale_main">
        <action
            android:id="@+id/action_nav_main_sale_to_saleFragment"
            app:destination="@id/nav_sale" />
    </fragment>

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.gas.storeapp.ui.sale.SaleFragment"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/nav_main_credit"
        android:name="com.gas.storeapp.ui.credit.MainCreditFragment"
        android:label="@string/menu_main_credit"
        tools:layout="@layout/fragment_credit_main">
        <action
            android:id="@+id/action_nav_main_credit_to_creditResumeFragment"
            app:destination="@+id/nav_credit_resume"/>
    </fragment>

    <fragment
        android:id="@+id/nav_credit_resume"
        android:name="com.gas.storeapp.ui.credit.CreditResumeFragment"
        android:label="Resumen de Cuenta"
        tools:layout="@layout/fragment_credit_resume"/>
</navigation>